--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -6,6 +6,7 @@
 @import "modules/range-input";
 @import "modules/animation";
 @import "modules/before-slider";
+@import "modules/widgets";
 
 //============ МОДУЛИ ====================
 
