--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -8,7 +8,7 @@
 @font-face {
 	font-family: icons;
 	font-display: swap;
-	src: url("../fonts/icons-v2.woff2") format("woff2"), url("../fonts/icons-v2.woff") format("woff");
+	src: url("../fonts/icons.woff2") format("woff2"), url("../fonts/icons.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
