--- a/TopSuites/css/style.css
+++ b/TopSuites/css/style.css
@@ -9,18 +9,18 @@
 }
 
 @font-face {
-  font-family: "PlusJakartaSans";
+  font-family: "icons";
   font-display: swap;
-  src: url("../fonts/PlusJakartaSans-Bold.woff") format("woff"), url("../fonts/PlusJakartaSans-Bold.woff2") format("woff2");
-  font-weight: 700;
+  src: url("../fonts/icons-1738779436746.woff") format("woff"), url("../fonts/icons-1738779436746.woff2") format("woff2");
+  font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "icons";
+  font-family: "PlusJakartaSans";
   font-display: swap;
-  src: url("../fonts/icons-1738692379444.woff") format("woff"), url("../fonts/icons-1738692379444.woff2") format("woff2");
-  font-weight: 400;
+  src: url("../fonts/PlusJakartaSans-Bold.woff") format("woff"), url("../fonts/PlusJakartaSans-Bold.woff2") format("woff2");
+  font-weight: 700;
   font-style: normal;
 }
 
@@ -65,6 +65,14 @@
 }
 
 @font-face {
+  font-family: "Raleway";
+  font-display: swap;
+  src: url("../fonts/Raleway-ExtraBold.woff") format("woff"), url("../fonts/Raleway-ExtraBold.woff2") format("woff2");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "PlusJakartaSans";
   font-display: swap;
   src: url("../fonts/PlusJakartaSans-SemiBold.woff") format("woff"), url("../fonts/PlusJakartaSans-SemiBold.woff2") format("woff2");
@@ -83,30 +91,6 @@
 @font-face {
   font-family: "Raleway";
   font-display: swap;
-  src: url("../fonts/Raleway-Bold.woff") format("woff"), url("../fonts/Raleway-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Raleway";
-  font-display: swap;
-  src: url("../fonts/Raleway-ExtraBold.woff") format("woff"), url("../fonts/Raleway-ExtraBold.woff2") format("woff2");
-  font-weight: 800;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Raleway";
-  font-display: swap;
-  src: url("../fonts/Raleway-Regular.woff") format("woff"), url("../fonts/Raleway-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Raleway";
-  font-display: swap;
   src: url("../fonts/Raleway-Medium.woff") format("woff"), url("../fonts/Raleway-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
@@ -115,8 +99,24 @@
 @font-face {
   font-family: "Raleway";
   font-display: swap;
+  src: url("../fonts/Raleway-Bold.woff") format("woff"), url("../fonts/Raleway-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-display: swap;
   src: url("../fonts/Raleway-Light.woff") format("woff"), url("../fonts/Raleway-Light.woff2") format("woff2");
   font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-display: swap;
+  src: url("../fonts/Raleway-Regular.woff") format("woff"), url("../fonts/Raleway-Regular.woff2") format("woff2");
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -256,6 +256,7 @@
 
 body {
   font-family: "PlusJakartaSans", sans-serif;
+  font-variant-numeric: lining-nums !important;
   color: #fff;
   background: #0c1621;
   min-width: 320px;
@@ -265,7 +266,7 @@ body {
 
 body.font-raleway {
   font-family: "Raleway", sans-serif;
-  font-variant-numeric: lining-nums;
+  font-variant-numeric: lining-nums !important;
 }
 
 body.font-raleway .title-xl,
