--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,25 +1,25 @@
 // Использование модулей SASS
-@use 'sass:math';
+@use "sass:math";
 // Использование модулей SASS
 // ======================================МИКСИНЫ==============================================
-@import 'mixins';
+@import "mixins";
 // ======================================МИКСИНЫ==============================================
 
 // ======================================ШРИФТЫ===============================================
 
 // &display=swap&subset=cyrillic-ext
-@import 'fonts';
+@import "fonts";
 
 // ======================================ШРИФТЫ===============================================
 // ======================================ИКОНОЧНЫЙ ШРИФТ======================================
-@import 'icons';
+@import "icons";
 
 // ======================================ИКОНОЧНЫЙ ШРИФТ======================================
 
 // Шрифт по умолчанию
-$fontfamily: 'PlusJakartaSans';
-$font-cabinet: 'CabinetGrotesk';
-$font-raleway: 'Raleway';
+$fontfamily: "PlusJakartaSans";
+$font-cabinet: "CabinetGrotesk";
+$font-raleway: "Raleway";
 
 // Шрифт по умолчанию
 
@@ -61,9 +61,10 @@ $ui-index-6: 6; // Для элементов, перекрывающих все
 body {
 	font-family: $fontfamily, sans-serif;
 
+	font-variant-numeric: lining-nums !important;
 	&.font-raleway {
 		font-family: $font-raleway, sans-serif;
-		font-variant-numeric: lining-nums;
+		font-variant-numeric: lining-nums !important;
 		.title-xl,
 		.title-lg,
 		.popup__title {
@@ -157,7 +158,7 @@ body {
 //=============== ОСНОВНАЯ СЕТКА===============================
 
 // Отзывчивая
-[class*='__container'] {
+[class*="__container"] {
 	margin: 0 auto;
 	box-sizing: content-box;
 	max-width: 100%;
@@ -180,11 +181,11 @@ body {
 
 //=================Подключаем файлы стилей
 //================Общий файл для элементов страницы
-@import 'ui';
-@import 'forms';
+@import "ui";
+@import "forms";
 //================Общий файл для элементов страницы
-@import 'header';
-@import 'footer';
+@import "header";
+@import "footer";
 //=======================================
 
 // =======================ОСНОВНОЙ БЛОК==================
@@ -194,11 +195,11 @@ body {
 }
 // ========================================================
 
-@import 'pages/home';
-@import 'pages/gallery';
-@import 'pages/blog';
-@import 'pages/contacts';
-@import 'pages/about';
-@import 'pages/error';
-@import 'pages/privacy';
-@import 'pages/service';
+@import "pages/home";
+@import "pages/gallery";
+@import "pages/blog";
+@import "pages/contacts";
+@import "pages/about";
+@import "pages/error";
+@import "pages/privacy";
+@import "pages/service";
