--- a/TopSuites/css/style.css
+++ b/TopSuites/css/style.css
@@ -3,15 +3,23 @@
 @font-face {
   font-family: "CabinetGrotesk";
   font-display: swap;
-  src: url("../fonts/CabinetGrotesk-Regular.woff") format("woff"), url("../fonts/CabinetGrotesk-Regular.woff2") format("woff2");
+  src: url("../fonts/CabinetGrotesk-Regular.woff2") format("woff2"), url("../fonts/CabinetGrotesk-Regular.woff") format("woff");
   font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "PlusJakartaSans";
+  font-display: swap;
+  src: url("../fonts/PlusJakartaSans-Bold.woff2") format("woff2"), url("../fonts/PlusJakartaSans-Bold.woff") format("woff");
+  font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "icons";
   font-display: swap;
-  src: url("../fonts/icons-1738779436746.woff") format("woff"), url("../fonts/icons-1738779436746.woff2") format("woff2");
+  src: url("../fonts/icons-1739207093545.woff2") format("woff2"), url("../fonts/icons-1739207093545.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -19,23 +27,7 @@
 @font-face {
   font-family: "PlusJakartaSans";
   font-display: swap;
-  src: url("../fonts/PlusJakartaSans-Bold.woff") format("woff"), url("../fonts/PlusJakartaSans-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "PlusJakartaSans";
-  font-display: swap;
-  src: url("../fonts/PlusJakartaSans-Light.woff") format("woff"), url("../fonts/PlusJakartaSans-Light.woff2") format("woff2");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "PlusJakartaSans";
-  font-display: swap;
-  src: url("../fonts/PlusJakartaSans-ExtraLight.woff") format("woff"), url("../fonts/PlusJakartaSans-ExtraLight.woff2") format("woff2");
+  src: url("../fonts/PlusJakartaSans-ExtraLight.woff2") format("woff2"), url("../fonts/PlusJakartaSans-ExtraLight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
 }
@@ -43,7 +35,15 @@
 @font-face {
   font-family: "PlusJakartaSans";
   font-display: swap;
-  src: url("../fonts/PlusJakartaSans-Medium.woff") format("woff"), url("../fonts/PlusJakartaSans-Medium.woff2") format("woff2");
+  src: url("../fonts/PlusJakartaSans-Light.woff2") format("woff2"), url("../fonts/PlusJakartaSans-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "PlusJakartaSans";
+  font-display: swap;
+  src: url("../fonts/PlusJakartaSans-Medium.woff2") format("woff2"), url("../fonts/PlusJakartaSans-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
@@ -51,7 +51,15 @@
 @font-face {
   font-family: "PlusJakartaSans";
   font-display: swap;
-  src: url("../fonts/PlusJakartaSans-Regular.woff") format("woff"), url("../fonts/PlusJakartaSans-Regular.woff2") format("woff2");
+  src: url("../fonts/PlusJakartaSans-ExtraBold.woff2") format("woff2"), url("../fonts/PlusJakartaSans-ExtraBold.woff") format("woff");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "PlusJakartaSans";
+  font-display: swap;
+  src: url("../fonts/PlusJakartaSans-Regular.woff2") format("woff2"), url("../fonts/PlusJakartaSans-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -59,23 +67,7 @@
 @font-face {
   font-family: "PlusJakartaSans";
   font-display: swap;
-  src: url("../fonts/PlusJakartaSans-ExtraBold.woff") format("woff"), url("../fonts/PlusJakartaSans-ExtraBold.woff2") format("woff2");
-  font-weight: 800;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Raleway";
-  font-display: swap;
-  src: url("../fonts/Raleway-ExtraBold.woff") format("woff"), url("../fonts/Raleway-ExtraBold.woff2") format("woff2");
-  font-weight: 800;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "PlusJakartaSans";
-  font-display: swap;
-  src: url("../fonts/PlusJakartaSans-SemiBold.woff") format("woff"), url("../fonts/PlusJakartaSans-SemiBold.woff2") format("woff2");
+  src: url("../fonts/PlusJakartaSans-SemiBold.woff2") format("woff2"), url("../fonts/PlusJakartaSans-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
 }
@@ -83,7 +75,15 @@
 @font-face {
   font-family: "Raleway";
   font-display: swap;
-  src: url("../fonts/Raleway-ExtraLight.woff") format("woff"), url("../fonts/Raleway-ExtraLight.woff2") format("woff2");
+  src: url("../fonts/Raleway-ExtraBold.woff2") format("woff2"), url("../fonts/Raleway-ExtraBold.woff") format("woff");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-display: swap;
+  src: url("../fonts/Raleway-ExtraLight.woff2") format("woff2"), url("../fonts/Raleway-ExtraLight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
 }
@@ -91,7 +91,7 @@
 @font-face {
   font-family: "Raleway";
   font-display: swap;
-  src: url("../fonts/Raleway-Medium.woff") format("woff"), url("../fonts/Raleway-Medium.woff2") format("woff2");
+  src: url("../fonts/Raleway-Medium.woff2") format("woff2"), url("../fonts/Raleway-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
@@ -99,15 +99,7 @@
 @font-face {
   font-family: "Raleway";
   font-display: swap;
-  src: url("../fonts/Raleway-Bold.woff") format("woff"), url("../fonts/Raleway-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Raleway";
-  font-display: swap;
-  src: url("../fonts/Raleway-Light.woff") format("woff"), url("../fonts/Raleway-Light.woff2") format("woff2");
+  src: url("../fonts/Raleway-Light.woff2") format("woff2"), url("../fonts/Raleway-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
@@ -115,7 +107,7 @@
 @font-face {
   font-family: "Raleway";
   font-display: swap;
-  src: url("../fonts/Raleway-Regular.woff") format("woff"), url("../fonts/Raleway-Regular.woff2") format("woff2");
+  src: url("../fonts/Raleway-Regular.woff2") format("woff2"), url("../fonts/Raleway-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -123,8 +115,16 @@
 @font-face {
   font-family: "Raleway";
   font-display: swap;
-  src: url("../fonts/Raleway-SemiBold.woff") format("woff"), url("../fonts/Raleway-SemiBold.woff2") format("woff2");
+  src: url("../fonts/Raleway-SemiBold.woff2") format("woff2"), url("../fonts/Raleway-SemiBold.woff") format("woff");
   font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-display: swap;
+  src: url("../fonts/Raleway-Bold.woff2") format("woff2"), url("../fonts/Raleway-Bold.woff") format("woff");
+  font-weight: 700;
   font-style: normal;
 }
 
